test/asm/bracketed-symbols.err
error: bracketed-symbols.asm(16):
    Formatting string as type 'X'
error: bracketed-symbols.asm(20):
    "Label" does not have a constant value
error: bracketed-symbols.asm(21):
    PC does not have a constant value; the current section is not fixed
error: Assembly aborted (3 errors)!
